<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">neihanduanzi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="main_tab_item_text">段子</string>
    <string name="main_tab_item_image">图片</string>
    <string name="main_tab_item_find">发现</string>
    <string name="main_tab_item_huodong">活动</string>
    <string name="main_tab_item_check">审核</string>
    <string name="title_activity_essay_detail">EssayDetailActivity</string>

</resources>
