<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  
    tools:context=".MainActivity" >
	<FrameLayout 
	    android:id="@+id/main_fragment"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    ></FrameLayout>
	<RadioGroup 
	    android:id="@+id/main_tab_bar"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal"
	    android:gravity="center"
	  
	    >
	    <RadioButton 
	        android:id="@+id/main_tab_item_text"
	      style="@style/main_tab_item"
	      android:drawableTop="@drawable/mai_tab_item_essay_selector"
	      android:checked="true"
	        android:text="@string/main_tab_item_text"/>
	    
	      <RadioButton 
	        android:id="@+id/main_tab_item_image"
	         android:drawableTop="@drawable/mai_tab_item_image_selector"
	      style="@style/main_tab_item"
	        android:text="@string/main_tab_item_image"/>
	      
	        <RadioButton 
	        android:id="@+id/main_tab_item_find"
	      style="@style/main_tab_item"
	       android:drawableTop="@drawable/mai_tab_item_find_selector"
	        android:text="@string/main_tab_item_find"/>
	        
	          <RadioButton 
	        android:id="@+id/main_tab_item_activity"
	      style="@style/main_tab_item"
	       android:drawableTop="@drawable/mai_tab_item_activity_selector"
	        android:text="@string/main_tab_item_huodong"/>
	          
	            <RadioButton 
	        android:id="@+id/main_tab_item_check"
	   style="@style/main_tab_item"
	    android:drawableTop="@drawable/mai_tab_item_check_selector"
	        android:text="@string/main_tab_item_check"/>
	    
	</RadioGroup>
</LinearLayout>
